[gd_scene load_steps=19 format=3 uid="uid://dfk2g7vniv65e"]

[ext_resource type="Script" path="res://scripts/Level1.gd" id="1_1djek"]
[ext_resource type="Texture2D" uid="uid://dcsiuatjd1ye6" path="res://tiles/BaseAtlas.png" id="2_ihphr"]
[ext_resource type="Texture2D" uid="uid://bl67tc8vl2atx" path="res://tiles/TrapAtlas2.png" id="3_ve76o"]
[ext_resource type="PackedScene" uid="uid://b8w2a2b8cvoq1" path="res://scenes/LaserBeam.tscn" id="4_l8wtn"]
[ext_resource type="PackedScene" uid="uid://3eoemflvp1h7" path="res://scenes/PointSampler.tscn" id="4_unr6v"]
[ext_resource type="PackedScene" uid="uid://c1wp510fphllw" path="res://scenes/Monster.tscn" id="6_b7lre"]
[ext_resource type="PackedScene" uid="uid://balfc7h6w65xi" path="res://scenes/ZeepBop.tscn" id="7_uoe5b"]
[ext_resource type="PackedScene" uid="uid://objchnna3dtd" path="res://scenes/StarPrize.tscn" id="8_icru8"]
[ext_resource type="PackedScene" uid="uid://b3i8rx4mhfdiu" path="res://scenes/CursorController.tscn" id="9_rdus8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fbwbr"]
resource_name = "BaseTiles"
texture = ExtResource("2_ihphr")
margins = Vector2i(5, 5)
separation = Vector2i(10, 10)
texture_region_size = Vector2i(50, 50)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-25, -25, -25, 25, 25, 25, 25, -25, 25, -25)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-25, -25, -25, 25, 25, 25, 25, -25, 25, -25)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-25, -25, -25, 25, 25, 25, 25, -25, 25, -25)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hgqsk"]
resource_name = "TrapTiles"
texture = ExtResource("3_ve76o")
margins = Vector2i(10, 10)
separation = Vector2i(5, 5)
texture_region_size = Vector2i(50, 50)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/custom_data_0 = true
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/custom_data_1 = true

[sub_resource type="TileSet" id="TileSet_crjbu"]
tile_size = Vector2i(50, 50)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
custom_data_layer_0/name = "isStart"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "isFinish"
custom_data_layer_1/type = 1
sources/0 = SubResource("TileSetAtlasSource_fbwbr")
sources/1 = SubResource("TileSetAtlasSource_hgqsk")

[sub_resource type="Curve2D" id="Curve2D_olv0n"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 505, 49, 0, 0, 0, 0, 1045, 49)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_jx3ld"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 301, 205, 0, 0, 0, 0, 301, 495)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_rs67x"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 855, 499, 0, 0, 0, 0, 995, 499)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_qgtcp"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 425, 425, 0, 0, 0, 0, 525, 425)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_nicpy"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 675, 325, 0, 0, 0, 0, 775, 325)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_0a6xv"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1075, 225, 0, 0, 0, 0, 1075, 325)
}
point_count = 2

[node name="Level1" type="Node2D"]
script = ExtResource("1_1djek")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_crjbu")
cell_quadrant_size = 50
format = 2
layer_0/name = "BaseTiles"
layer_0/tile_data = PackedInt32Array(0, 0, 2, 1, 0, 2, 2, 0, 2, 3, 0, 2, 4, 0, 2, 5, 0, 2, 6, 0, 2, 7, 0, 2, 8, 0, 2, 9, 0, 2, 10, 0, 2, 11, 0, 2, 12, 0, 2, 13, 0, 2, 14, 0, 2, 15, 0, 2, 16, 0, 2, 17, 0, 2, 18, 0, 2, 19, 0, 2, 20, 0, 2, 21, 0, 2, 22, 0, 2, 23, 0, 2, 24, 0, 2, 851992, 0, 2, 851991, 0, 2, 851990, 0, 2, 851989, 0, 2, 851988, 0, 2, 851987, 0, 2, 851986, 0, 2, 851985, 0, 2, 851984, 0, 2, 851983, 0, 2, 851982, 0, 2, 851981, 0, 2, 851980, 0, 2, 851979, 0, 2, 851978, 0, 2, 851977, 0, 2, 851976, 0, 2, 851975, 0, 2, 851974, 0, 2, 851973, 0, 2, 851972, 0, 2, 851971, 0, 2, 851970, 0, 2, 851969, 0, 2, 851968, 0, 2, 65536, 0, 2, 131072, 0, 2, 196608, 0, 2, 524288, 0, 2, 589824, 0, 2, 655360, 0, 2, 720896, 0, 2, 786432, 0, 2, 458752, 0, 2, 327680, 0, 2, 262144, 0, 2, 65560, 0, 2, 131096, 0, 2, 196632, 0, 2, 262168, 0, 2, 327704, 0, 2, 393240, 0, 2, 458776, 0, 2, 524312, 0, 2, 589848, 0, 2, 655384, 0, 2, 720920, 0, 2, 786456, 0, 2, 393216, 131072, 0, 393217, 131072, 0, 327681, 131072, 0, 262145, 131072, 0, 196609, 131072, 0, 131073, 131072, 0, 65537, 131072, 0, 65538, 131072, 0, 65539, 131072, 0, 65540, 131072, 0, 65541, 65536, 1, 65542, 131072, 0, 65543, 131072, 0, 131079, 131072, 0, 196615, 131072, 0, 196614, 131072, 0, 196613, 131072, 0, 196612, 131072, 0, 196611, 131072, 0, 262149, 131072, 0, 327685, 131072, 0, 327684, 131072, 0, 327683, 131072, 0, 393219, 131072, 0, 458755, 131072, 0, 524291, 131072, 0, 524292, 131072, 0, 524293, 131072, 0, 393221, 131072, 0, 458757, 131072, 0, 589829, 131072, 0, 655365, 131072, 0, 655364, 131072, 0, 655363, 131072, 0, 655362, 131072, 0, 720898, 131072, 0, 786434, 131072, 0, 786435, 131072, 0, 786436, 131072, 0, 786437, 131072, 0, 786439, 131072, 0, 786440, 131072, 0, 786441, 131072, 0, 786442, 131072, 0, 786444, 131072, 0, 786445, 131072, 0, 786446, 131072, 0, 786438, 65536, 1, 786443, 65536, 1, 262150, 0, 2, 327686, 0, 2, 393222, 0, 2, 458758, 0, 2, 524294, 0, 2, 589830, 0, 2, 393220, 0, 2, 458756, 0, 2, 720909, 131072, 0, 786447, 65536, 1, 655373, 131072, 0, 655372, 131072, 0, 655371, 131072, 0, 655370, 131072, 0, 655369, 131072, 0, 655368, 131072, 0, 655367, 131072, 0, 589831, 131072, 0, 589834, 131072, 0, 524298, 131072, 0, 524296, 131072, 0, 524297, 131072, 0, 524295, 131072, 0, 458762, 131072, 0, 393226, 131072, 0, 393225, 131072, 0, 393224, 131072, 0, 393223, 131072, 0, 327689, 131072, 0, 262153, 131072, 0, 196617, 131072, 0, 131081, 131072, 0, 65545, 131072, 0, 65546, 131072, 0, 65547, 131072, 0, 131083, 131072, 0, 196619, 131072, 0, 196620, 131072, 0, 196621, 131072, 0, 131085, 131072, 0, 65549, 131072, 0, 65550, 131072, 0, 65551, 131072, 0, 131087, 131072, 0, 196623, 131072, 0, 196624, 131072, 0, 196625, 131072, 0, 196626, 131072, 0, 196627, 131072, 0, 131091, 131072, 0, 65555, 131072, 0, 65556, 131072, 0, 65557, 131072, 0, 65558, 131072, 0, 65559, 131072, 0, 131095, 131072, 0, 196631, 131072, 0, 262167, 131072, 0, 196630, 131072, 0, 196629, 131072, 0, 327703, 131072, 0, 393239, 131072, 0, 393238, 131072, 0, 393237, 131072, 0, 327701, 131072, 0, 262165, 131072, 0, 393236, 131072, 0, 393235, 131072, 0, 524307, 131072, 0, 524308, 131072, 0, 524309, 131072, 0, 524311, 131072, 0, 393234, 131072, 0, 458770, 131072, 0, 524306, 131072, 0, 589847, 131072, 0, 524310, 65536, 1, 655383, 131072, 0, 720919, 131072, 0, 786455, 131072, 0, 786454, 131072, 0, 786453, 131072, 0, 720917, 131072, 0, 655381, 131072, 0, 655380, 131072, 0, 655379, 131072, 0, 720915, 131072, 0, 786451, 131072, 0, 786450, 131072, 0, 786449, 131072, 0, 720913, 131072, 0, 655377, 131072, 0, 655376, 131072, 0, 655375, 131072, 0, 589839, 131072, 0, 131074, 0, 2, 131075, 0, 2, 131076, 0, 2, 131077, 0, 2, 131078, 0, 2, 196610, 0, 2, 262146, 0, 2, 262147, 0, 2, 262148, 0, 2, 327682, 0, 2, 393218, 0, 2, 458754, 0, 2, 524290, 0, 2, 589826, 0, 2, 589827, 0, 2, 589828, 0, 2, 458753, 0, 2, 524289, 0, 2, 589825, 0, 2, 655361, 0, 2, 720897, 0, 2, 786433, 0, 2, 720899, 0, 2, 720900, 0, 2, 720901, 0, 2, 720902, 0, 2, 655366, 0, 2, 720903, 0, 2, 720904, 0, 2, 720905, 0, 2, 720906, 0, 2, 720907, 0, 2, 720908, 0, 2, 589832, 0, 2, 589833, 0, 2, 458759, 0, 2, 458760, 0, 2, 458761, 0, 2, 262151, 0, 2, 262152, 0, 2, 327688, 0, 2, 327687, 0, 2, 196616, 0, 2, 131080, 0, 2, 65544, 0, 2, 65548, 131072, 0, 131084, 0, 2, 131082, 0, 2, 196618, 0, 2, 262154, 0, 2, 327690, 0, 2, 262155, 0, 2, 327691, 0, 2, 393227, 0, 2, 458763, 0, 2, 524299, 0, 2, 589835, 0, 2, 262156, 0, 2, 262157, 0, 2, 262158, 0, 2, 262159, 0, 2, 131086, 0, 2, 196622, 0, 2, 65552, 131072, 0, 65553, 131072, 0, 65554, 131072, 0, 131090, 0, 2, 131089, 0, 2, 131088, 0, 2, 131092, 0, 2, 131093, 0, 2, 131094, 0, 2, 262166, 0, 2, 327702, 0, 2, 196628, 0, 2, 262164, 0, 2, 327700, 0, 2, 262163, 0, 2, 262162, 0, 2, 262161, 0, 2, 262160, 0, 2, 327697, 0, 2, 327698, 0, 2, 327699, 0, 2, 393233, 0, 2, 589840, 0, 2, 589836, 0, 2, 589837, 0, 2, 589838, 0, 2, 655374, 0, 2, 720910, 0, 2, 720911, 0, 2, 720912, 0, 2, 786448, 0, 2, 458769, 0, 2, 524305, 0, 2, 589841, 0, 2, 589842, 0, 2, 720914, 0, 2, 589843, 0, 2, 589844, 0, 2, 589845, 0, 2, 589846, 0, 2, 655382, 0, 2, 720918, 0, 2, 720916, 0, 2, 786452, 0, 2, 458771, 0, 2, 458772, 0, 2, 458773, 0, 2, 458774, 0, 2, 458775, 0, 2, 655378, 131072, 0, 524303, 131072, 0, 524304, 131072, 0, 458768, 131072, 0, 393232, 131072, 0, 393231, 131072, 0, 393230, 131072, 0, 393229, 131072, 0, 327693, 131072, 0, 327692, 131072, 0, 458765, 131072, 0, 524301, 131072, 0, 524302, 131072, 0, 393228, 0, 2, 458764, 0, 2, 524300, 0, 2, 327694, 0, 2, 327695, 0, 2, 327696, 0, 2, 458766, 0, 2, 458767, 0, 2)
layer_1/name = "LowTraps"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(65540, 196609, 1, 786437, 196609, 1, 786442, 196609, 1, 524309, 196609, 1, 262150, 1, 1, 327686, 1, 1, 393222, 1, 1, 458758, 1, 1, 524294, 1, 1, 589830, 1, 1, 11, 196609, 0, 12, 196609, 0, 13, 196609, 0, 14, 196609, 0, 15, 196609, 0, 16, 196609, 0, 17, 196609, 0, 18, 196609, 0, 19, 196609, 0, 20, 196609, 0, 10, 196609, 0, 589841, 196609, 0, 589842, 196609, 0, 589843, 196609, 0)
layer_2/name = "Actors"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array(393216, 131073, 2, 327692, 196609, 2)
layer_3/name = "HighTraps"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = false
layer_3/y_sort_origin = 0
layer_3/z_index = 3
layer_3/tile_data = PackedInt32Array(524298, 1, 0, 524297, 1, 0, 524296, 1, 0, 262165, 65537, 0, 327701, 65537, 0, 393237, 65537, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0)

[node name="Laser1Path" type="Path2D" parent="."]
curve = SubResource("Curve2D_olv0n")

[node name="PointSampler" parent="Laser1Path" instance=ExtResource("4_unr6v")]

[node name="LaserBeam" parent="Laser1Path" node_paths=PackedStringArray("point_sampler") instance=ExtResource("4_l8wtn")]
position = Vector2(505, 74)
rotation = 1.5708
point_sampler = NodePath("../PointSampler")

[node name="Laser2Path" type="Path2D" parent="."]
curve = SubResource("Curve2D_jx3ld")

[node name="PointSampler" parent="Laser2Path" instance=ExtResource("4_unr6v")]
position = Vector2(301, 205)
rotation = 1.5708

[node name="LaserBeam" parent="Laser2Path" node_paths=PackedStringArray("point_sampler") instance=ExtResource("4_l8wtn")]
position = Vector2(275, 205)
rotation = 3.14159
point_sampler = NodePath("../PointSampler")

[node name="Laser3Path" type="Path2D" parent="."]
curve = SubResource("Curve2D_rs67x")

[node name="PointSampler" parent="Laser3Path" instance=ExtResource("4_unr6v")]
position = Vector2(855, 499)

[node name="LaserBeam" parent="Laser3Path" node_paths=PackedStringArray("point_sampler") instance=ExtResource("4_l8wtn")]
position = Vector2(855, 525)
rotation = 1.5708
point_sampler = NodePath("../PointSampler")

[node name="Monster1Path" type="Path2D" parent="."]
curve = SubResource("Curve2D_qgtcp")

[node name="PointSampler" parent="Monster1Path" instance=ExtResource("4_unr6v")]
position = Vector2(525, 425)
progress = 100.0

[node name="Monster" parent="Monster1Path" node_paths=PackedStringArray("zeep_bop", "point_sampler") instance=ExtResource("6_b7lre")]
position = Vector2(525, 425)
zeep_bop = NodePath("../../ZeepBop")
point_sampler = NodePath("../PointSampler")

[node name="Monster2Path" type="Path2D" parent="."]
curve = SubResource("Curve2D_nicpy")

[node name="PointSampler" parent="Monster2Path" instance=ExtResource("4_unr6v")]
position = Vector2(675, 325)

[node name="Monster" parent="Monster2Path" node_paths=PackedStringArray("zeep_bop", "point_sampler") instance=ExtResource("6_b7lre")]
position = Vector2(675, 325)
zeep_bop = NodePath("../../ZeepBop")
point_sampler = NodePath("../PointSampler")

[node name="Monster3Path" type="Path2D" parent="."]
curve = SubResource("Curve2D_0a6xv")

[node name="PointSampler" parent="Monster3Path" instance=ExtResource("4_unr6v")]
position = Vector2(1075, 325)
rotation = 1.5708
progress = 100.0

[node name="Monster" parent="Monster3Path" node_paths=PackedStringArray("zeep_bop", "point_sampler") instance=ExtResource("6_b7lre")]
position = Vector2(1075, 325)
zeep_bop = NodePath("../../ZeepBop")
point_sampler = NodePath("../PointSampler")

[node name="ZeepBop" parent="." instance=ExtResource("7_uoe5b")]
position = Vector2(25, 325)

[node name="StarPrize" parent="." instance=ExtResource("8_icru8")]
position = Vector2(625, 275)

[node name="CursorController" parent="." instance=ExtResource("9_rdus8")]

[connection signal="mouse_down" from="CursorController" to="." method="_on_cursor_controller_mouse_down"]
[connection signal="mouse_up" from="CursorController" to="." method="_on_cursor_controller_mouse_up"]
